fix: Agregar dependencia Lombok y resolver errores de compilación